--- a/Flutter/app/src/main/res/values/strings.xml
+++ b/Flutter/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Flutter</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+
+    <string name="login_username">Username</string>
+    <string name="login_password">Password</string>
 </resources>
