--- a/Flutter/app/src/main/res/values/strings.xml
+++ b/Flutter/app/src/main/res/values/strings.xml
@@ -6,6 +6,5 @@
     <string name="login_username">Username</string>
     <string name="login_password">Password</string>
 
-    <string name="hashtag_feed_title">Who\'s Fluttering about %s
-    </string>
+    <string name="hashtag_feed_title">Who\'s Fluttering about\n%s</string>
 </resources>
