--- a/Flutter/app/src/main/res/values/strings.xml
+++ b/Flutter/app/src/main/res/values/strings.xml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">Flutter</string>
+    <string name="main_my_story">My Story</string>
+    <string name="main_news_feed">News Feed</string>
+
+    <!--Login-->
+    <string name="login_name">Name</string>
+    <string name="login_alias">Alias</string>
+    <string name="login_password">Password</string>
+    <string name="choose_profile_picture"><u>Choose Photo</u></string>
+    <string name="already_have_account">Already have an account?</string>
+    <string name="sign_in_here"><u>Sign In Here</u></string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="sign_up_here"><u>Sign Up Here</u></string>
+    <string name="sign_up_button">SIGN UP</string>
+
+    <!--Hashtag-->
+    <string name="hashtag_feed_title">Who\'s Fluttering about\n%s</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
