--- a/Flutter/app/src/main/res/values/strings.xml
+++ b/Flutter/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Flutter</string>
     <string name="main_my_story">My Story</string>
     <string name="main_news_feed">News Feed</string>
+    <string name="logout">LOGOUT</string>
 
     <!--Login-->
     <string name="login_name">Name</string>
